--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&family=Markazi+Text:wght@400..700&family=Noto+Naskh+Arabic:wght@400..700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@100..900&display=swap'); */
+@import url("https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&family=Markazi+Text:wght@400..700&family=Noto+Naskh+Arabic:wght@400..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .screenPadding {
+    @apply px-[16px] sm:px-[32px] md:px-[64px]  xl:px-[140px];
+  }
+}
 
 @layer utilities {
-    .screenPadding {
-      @apply px-[16px] sm:px-[32px] md:px-[64px]  xl:px-[140px] 
-    }
-  
+  .img-shadow {
+    filter: drop-shadow(40px 50px 25px #0f1115);
   }
-
-  @layer utilities {
-    .img-shadow {
-      filter: drop-shadow(40px 50px 25px #0f1115);
-    }
-    .img-shadow2 {
-      filter: drop-shadow(10px 30px 15px #0f1115);
-    }
-    .input-style {
-      @apply px-4 py-2 border-[1px] border-gray-400 rounded-md
-    }
-    .primary-btn {
-      @apply bg-primary text-white px-4 py-2 rounded-md hover:bg-primaryDark duration-200 
-    }
+  .img-shadow2 {
+    filter: drop-shadow(10px 30px 15px #0f1115);
   }
+  .input-style {
+    @apply px-4 py-2 border-[1px] border-gray-400 rounded-md;
+  }
+  .primary-btn {
+    @apply bg-primary text-white px-4 py-2 rounded-md hover:bg-primaryDark duration-200;
+  }
+}
