--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@100..900&display=swap'); */
-@import url("https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&family=Markazi+Text:wght@400..700&family=Noto+Naskh+Arabic:wght@400..700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap');
 
 @tailwind base;
 @tailwind components;
